create: file structure of styles

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,5 @@
 }
 
 body {
-  font-family: 'Comfortaa', cursive;
-  font-family: 'Luckiest Guy', cursive;
-  font-family: 'Nunito', sans-serif;
-  font-family: 'Mulish', sans-serif;
-}
+  font-family: "Mulish", sans-serif;
+}/*# sourceMappingURL=style.css.map */
