--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,6 @@
-body
-  background-color: #fff
-  color: Red
+// Подключение переменных
+@import 'variables'
+// Подключение базовых настроек
+@import 'settings'
+// Подключение стилей Header
+@import 'blocks/_header'
