--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,71 @@
 
 body {
   font-family: "Mulish", sans-serif;
+  color: #333333;
+}
+
+.container {
+  max-width: 1110px;
+  margin: auto;
+}
+
+.header {
+  background-color: #fff;
+}
+.header-top {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  justify-content: space-between;
+}
+.header__search {
+  margin-right: auto;
+  margin-left: 108px;
+}
+
+.search {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px;
+  height: 40px;
+}
+.search__input {
+  width: 350px;
+  height: 100%;
+  padding-left: 23px;
+  padding-right: 75px;
+  border: none;
+  font-size: 12px;
+  line-height: 15px;
+  background-color: #F5FAFE;
+}
+.search__button {
+  position: absolute;
+  width: 65px;
+  height: 100%;
+  border: none;
+  top: 0;
+  right: 0;
+  background-color: #EC1F46;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #333333;
+}
+.user__avatar {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.user__Name {
+  font-size: 14px;
+  line-height: 18px;
+  margin-left: 18px;
 }/*# sourceMappingURL=style.css.map */
