--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,17 @@ body {
   margin: auto;
 }
 
-.header {
+.navbar {
   background-color: #fff;
 }
-.header-top {
+.navbar-top {
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   justify-content: space-between;
 }
-.header__search {
+.navbar__search {
   margin-right: auto;
   margin-left: 108px;
 }
