--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,33 +1,33 @@
-.header
+.navbar
   background-color: #fff
   &-top
     display: flex
     align-items: center
     padding-top: 40px
-    padding-bottom: 40px       
-    justify-content: space-between    
+    padding-bottom: 40px
+    justify-content: space-between
   &__search
     margin-right: auto
     margin-left: 108px
 .search
-  display: flex  
+  display: flex
   position: relative
   overflow: hidden
-  border-radius: 6px 
+  border-radius: 6px
   height: 40px
   &__input
     width: 350px
-    height: 100%    
+    height: 100%
     padding-left: 23px
-    padding-right: 75px   
-    border: none     
+    padding-right: 75px
+    border: none
     font-size: 12px
-    line-height: 15px        
+    line-height: 15px
     background-color: #F5FAFE
   &__button
     position: absolute
     width: 65px
-    height: 100%    
+    height: 100%
     border: none
     top: 0
     right: 0
@@ -46,13 +46,3 @@
     font-size: 14px
     line-height: 18px
     margin-left: 18px
-      
-
-    
-    
-
-    
-    
-    
-    
-    
