--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,6 +9,23 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-bottom
+    background-color: $dark-color
+  &-menu
+    list-style-type: none
+    margin: 0
+    padding: 31px 0
+    color: $white-color 
+    display: flex
+    align-items: center
+    justify-content: space-between
+    font-weight: 700
+    font-size: 14px
+    line-height: 18px
+    text-transform: uppercase   
+    &__link
+      text-decoration: none
+      color: inherit  
 .search
   display: flex
   position: relative
