create: responsive tablet for header

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -26,6 +26,8 @@
     &__link
       text-decoration: none
       color: inherit  
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
