--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
   color: inherit;
 }
 
+.logo {
+  width: 177px;
+}
+
 .search {
   display: flex;
   position: relative;
@@ -91,4 +95,37 @@ body {
   font-size: 14px;
   line-height: 18px;
   margin-left: 18px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 700px;
+  }
+  .navbar-top {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .navbar-menu {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
+  .navbar-menu__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .navbar__search {
+    margin-left: auto;
+    max-width: 340px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 576px;
+    width: 92%;
+  }
 }/*# sourceMappingURL=style.css.map */
