create: mobile responsive for header

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -5,10 +5,12 @@
     align-items: center
     padding-top: 40px
     padding-bottom: 40px
-    justify-content: space-between
+    justify-content: space-between      
   &__search
     margin-right: auto
-    margin-left: 108px
+    margin-left: 108px  
+  &__menu-button
+    display: none
   &-bottom
     background-color: $dark-color
   &-menu
