--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 .navbar {
   background-color: #fff;
 }
@@ -25,6 +29,9 @@ body {
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
+}
+.navbar__menu-button {
+  display: none;
 }
 .navbar-bottom {
   background-color: #0A223D;
@@ -106,6 +113,9 @@ body {
   .container {
     max-width: 700px;
   }
+  .logo {
+    width: 132px;
+  }
   .navbar-top {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -127,5 +137,29 @@ body {
   .container {
     max-width: 576px;
     width: 92%;
+  }
+  .navbar__search, .navbar__user, .navbar-menu {
+    display: none;
+  }
+  .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 16px;
+    height: 11px;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+  }
+  .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+}
+@media (max-width: 576px) {
+  .logo {
+    width: 99px;
   }
 }/*# sourceMappingURL=style.css.map */
