--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,7 +18,9 @@
         line-height: 15px
     &__search
       margin-left: auto
-      max-width: 340px
+  .search
+    &__input
+      width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -34,6 +36,7 @@
       flex-direction: column
       width: 16px
       height: 11px
+      padding: 0
       border: none
       background-color: #fff
       cursor: pointer
