--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,5 @@
 @import 'blocks/_header'
 //Подключение стилей для адаптива
 @import 'media'
+//Подключение стилей для Breadcrump
+@import 'blocks/breadcrump'
