creating: hotel info block

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,3 +8,5 @@
 @import 'media'
 //Подключение стилей для Breadcrump
 @import 'blocks/breadcrump'
+//Подключение стилей для Hotel
+@import 'blocks/hotel'
