--- a/css/style.css
+++ b/css/style.css
@@ -169,11 +169,6 @@ img {
   color: #FFFFFF;
 }
 
-.swiper {
-  width: 728px;
-  height: 450px;
-}
-
 .rating {
   width: 65px;
   height: 45px;
@@ -190,6 +185,58 @@ img {
   font-size: 14px;
   line-height: 18px;
   font-weight: bold;
+}
+
+.swiper {
+  width: 100%;
+  height: 450px;
+  position: relative;
+  border-radius: 8px;
+}
+.swiper:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  z-index: 10;
+}
+.swiper-slide__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.slider {
+  width: 728px;
+}
+.slider-button {
+  position: absolute;
+  top: 0;
+  z-index: 99;
+  width: 30px;
+  height: 30px;
+  border: none;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  background-color: transparent;
+}
+.slider-button--next {
+  right: 18px;
+  background-image: url(../img/arrow-right.svg);
+}
+.slider-button--prev {
+  left: 18px;
+  background-image: url(../img/arrow-left.svg);
 }
 
 @media (max-width: 1200px) {
