--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ img {
   max-width: 100%;
 }
 
+.booking {
+  font-family: "Nunito";
+  font-style: normal;
+}
+
 .navbar {
   background-color: #fff;
 }
@@ -155,6 +160,15 @@ img {
   font-size: 12px;
   line-height: 15px;
 }
+.hotel-grid {
+  display: flex;
+  justify-content: space-between;
+}
+.hotel-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .stars {
   flex-basis: 100%;
@@ -213,7 +227,7 @@ img {
 }
 
 .slider {
-  width: 728px;
+  max-width: 728px;
 }
 .slider-button {
   position: absolute;
@@ -237,6 +251,96 @@ img {
 .slider-button--prev {
   left: 18px;
   background-image: url(../img/arrow-left.svg);
+}
+
+.booking {
+  background-color: #0A223D;
+  width: 350px;
+  height: 210px;
+  border-radius: 8px;
+  color: #FFFFFF;
+  padding: 28px;
+}
+.booking__info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 9px;
+}
+.booking__price {
+  display: flex;
+  flex-direction: column;
+}
+.booking__start {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+}
+.booking__pricetag {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 33px;
+}
+.booking__per-room {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+}
+.booking__room {
+  min-width: 81px;
+}
+.booking__details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 4px 0;
+}
+.booking__description {
+  margin-left: 9px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+}
+.booking__call-center {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 17px;
+}
+.booking__heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+.booking__number {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  color: inherit;
+}
+.booking__num {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  margin-left: 8px;
+}
+.booking__button {
+  width: 100%;
+  min-height: 45px;
+  background-color: #EC1F46;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  cursor: pointer;
+}
+
+.map {
+  width: 347px;
+  height: 213px;
+  border: 1px solid black;
 }
 
 @media (max-width: 1200px) {
