--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -22,6 +22,13 @@
     margin: 0
     font-size: 12px
     line-height: 15px
+  &-grid
+    display: flex
+    justify-content: space-between    
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
 .stars
   flex-basis: 100%
 .offer
@@ -67,7 +74,7 @@
       width: 100%
       height: 100%
 .slider
-  width: 728px
+  max-width: 728px
   &-button
     position: absolute
     top: 0
@@ -88,7 +95,86 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-left.svg)
-   
+.booking
+  background-color: $dark-color
+  width: 350px
+  height: 210px
+  border-radius: 8px
+  color: $white-color
+  padding: 28px
+  &__info
+    display: flex 
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column
+  &__start    
+    font-weight: 400
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-weight: 400
+    font-size: 12px
+    line-height: 16px
+  &__room
+    min-width: 81px    
+  &__details
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin: 4px 0
+  &__description
+    margin-left: 9px
+    font-weight: 400
+    font-size: 12px
+    line-height: 16px
+
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+  &__heading
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    text-decoration: none
+    color: inherit
+  &__num
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+    margin-left: 8px
+  &__button
+    width: 100%
+    min-height: 45px
+    background-color: $accent
+    border: none
+    border-radius: 4px
+    color: $white-color
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    cursor: pointer
+.map
+  width: 347px
+  height: 213px
+  border: 1px solid black
+
+    
+
+    
+    
+
 
 
 
