--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ img {
 
 .swiper {
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   border-radius: 8px;
 }
@@ -228,6 +228,7 @@ img {
 
 .slider {
   max-width: 728px;
+  height: 450px;
 }
 .slider-button {
   position: absolute;
@@ -340,12 +341,16 @@ img {
 .map {
   width: 347px;
   height: 213px;
-  border: 1px solid black;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
   }
 }
 @media (max-width: 992px) {
@@ -371,6 +376,24 @@ img {
     margin-left: auto;
   }
   .search__input {
+    width: 340px;
+  }
+  .hotel-grid {
+    flex-direction: column;
+  }
+  .slider {
+    width: 100%;
+  }
+  .hotel-right {
+    flex-direction: row;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .booking {
+    width: 340px;
+  }
+  .map {
     width: 340px;
   }
 }
@@ -426,9 +449,28 @@ img {
     order: -1;
     margin-left: 0;
   }
+  .slider {
+    height: 350px;
+  }
+  .hotel-right {
+    flex-direction: column;
+    min-height: 450px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .slider {
+    height: 250px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
