--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,8 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -21,6 +23,21 @@
   .search
     &__input
       width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+  .slider
+    width: 100%
+  .hotel
+    &-right
+      flex-direction: row
+    &__slider
+      margin-bottom: 30px
+  .booking
+    width: 340px
+  .map
+    width: 340px    
+
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -65,8 +82,24 @@
       &__offer
         order: -1
         margin-left: 0
+  .slider
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+       
+  .map
+    width: 100%
 @media ( max-width: 576px )
   .logo
     width: 99px 
+  .slider
+    height: 250px
+  .hotel
+    &__slider
+      margin-bottom: 20px
   
   
