--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -54,7 +54,7 @@
     font-weight: bold
 .swiper
   width: 100%
-  height: 450px 
+  height: 100% 
   position: relative
   border-radius: 8px
   &:after
@@ -75,6 +75,7 @@
       height: 100%
 .slider
   max-width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 0
@@ -168,7 +169,8 @@
 .map
   width: 347px
   height: 213px
-  border: 1px solid black
+  border-radius: 10px  
+  overflow: hidden
 
     
 
