--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,7 +4,8 @@
   .slider
     width: 590px
 @media (max-width: 992px)
-  .container
+  .container, 
+  .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -89,10 +90,15 @@
       flex-direction: column
       min-height: 450px
   .booking
-    width: 100%
-       
+    width: 100%       
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
 @media ( max-width: 576px )
   .logo
     width: 99px 
