--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/breadcrump'
 //Подключение стилей для Hotel
 @import 'blocks/hotel'
+//Подключение стилей для секции Subscribe Newsletter
+@import 'blocks/newsletter'
 //Подключение стилей для адаптива
 @import 'media'
