created: subscribe section and media

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -107,5 +107,18 @@
   .hotel
     &__slider
       margin-bottom: 20px
-  
+  .newsletter
+    &-title
+      font-style: normal
+      font-weight: 300
+      font-size: 20px
+      line-height: 25px
+      &__strong
+        font-style: normal
+        font-weight: 600
+        font-size: 30px
+        line-height: 38px
+  .subscribe
+    &__input
+      width: 280px
   
