--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,6 @@ img {
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 260px;
   background-image: url(../img/newsletter-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -557,5 +556,20 @@ img {
   }
   .hotel__slider {
     margin-bottom: 20px;
+  }
+  .newsletter-title {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .newsletter-title__strong {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 38px;
+  }
+  .subscribe__input {
+    width: 280px;
   }
 }/*# sourceMappingURL=style.css.map */
