--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,52 @@ img {
   flex-direction: column;
   justify-content: space-between;
 }
+.hotel-slider {
+  max-width: 728px;
+  height: 450px;
+}
+.hotel-slider__item {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.hotel-slider__item:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  z-index: 10;
+}
+.hotel-slider__button {
+  position: absolute;
+  top: 0;
+  z-index: 99;
+  width: 30px;
+  height: 30px;
+  border: none;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  background-color: transparent;
+}
+.hotel-slider__button--next {
+  right: 18px;
+  background-image: url(../img/arrow-right.svg);
+}
+.hotel-slider__button--prev {
+  left: 18px;
+  background-image: url(../img/arrow-left.svg);
+}
 
 .stars {
   flex-basis: 100%;
@@ -200,58 +246,11 @@ img {
   line-height: 18px;
   font-weight: bold;
 }
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  border-radius: 8px;
-}
-.swiper:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
-  z-index: 10;
-}
-.swiper-slide__img {
+.rating-slide__img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   height: 100%;
-}
-
-.slider {
-  max-width: 728px;
-  height: 450px;
-}
-.slider-button {
-  position: absolute;
-  top: 0;
-  z-index: 99;
-  width: 30px;
-  height: 30px;
-  border: none;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 10px;
-  background-color: transparent;
-}
-.slider-button--next {
-  right: 18px;
-  background-image: url(../img/arrow-right.svg);
-}
-.slider-button--prev {
-  left: 18px;
-  background-image: url(../img/arrow-left.svg);
 }
 
 .booking {
@@ -420,6 +419,119 @@ img {
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
+}
+
+.reviews {
+  padding: 40px 0 70px 0;
+}
+.reviews__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 70px;
+}
+.reviews-slider__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 730px;
+  margin: 45px auto 0;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 0 62px 30px;
+}
+.reviews-slider__item:before {
+  content: "";
+  position: absolute;
+  left: 62px;
+  top: 13px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-left.svg);
+  background-repeat: no-repeat;
+  border: 1px solid green;
+}
+.reviews-slider__item:after {
+  content: "";
+  position: absolute;
+  right: 62px;
+  top: 118px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-right.svg);
+  background-repeat: no-repeat;
+  border: 1px solid green;
+}
+.reviews-slider__button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-size: 10px;
+  background-position: center;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  z-index: 100;
+}
+.reviews-slider__button--prev {
+  left: 0;
+  background-image: url(../img/review-slider-arrow-left.svg);
+}
+.reviews-slider__button--next {
+  right: 0;
+  background-image: url(../img/review-slider-arrow-right.svg);
+}
+.reviews-slider__profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -45px;
+  margin-bottom: 30px;
+}
+.reviews-slider__avatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 9px;
+}
+.reviews-slider__username {
+  margin-top: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #EC1F46;
+  margin-bottom: 10px;
+}
+.reviews-slider__date {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 13px;
+  color: #000000;
+  margin-bottom: 4px;
+}
+.reviews-slider__rating {
+  display: flex;
+  align-items: center;
+}
+.reviews-slider__text {
+  max-width: 537px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 160%;
+  text-align: justify;
+  margin: auto;
 }
 
 @media (max-width: 1200px) {
