--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/hotel'
 //Подключение стилей для секции Subscribe Newsletter
 @import 'blocks/newsletter'
+//Подключение стилей для отзывов
+@import 'blocks/reviews'
 //Подключение стилей для адаптива
 @import 'media'
