created: responsive for reviews

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -2,9 +2,8 @@
   display: flex
   justify-content: center
   position: relative
-  width: 100%
-  
-  background-image: url(../img/newsletter-bg.jpg)
+  width: 100%  
+  /* background-image: url(../img/newsletter-bg.jpg) */
   background-repeat: no-repeat
   background-size: cover
   background-position: center
