--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ img {
   justify-content: center;
   position: relative;
   width: 100%;
-  background-image: url(../img/newsletter-bg.jpg);
+  /* background-image: url(../img/newsletter-bg.jpg) */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -438,7 +438,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 730px;
+  max-width: 730px;
   margin: 45px auto 0;
   background-color: #fff;
   border-radius: 8px;
@@ -536,8 +536,13 @@ img {
   .container {
     max-width: 960px;
   }
-  .slider {
+  .hotel-slider {
     width: 590px;
+  }
+  .hotel-slider__img {
+    height: 450px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 @media (max-width: 992px) {
@@ -569,7 +574,7 @@ img {
   .hotel-grid {
     flex-direction: column;
   }
-  .slider {
+  .hotel-slider {
     width: 100%;
   }
   .hotel-right {
@@ -583,6 +588,17 @@ img {
   }
   .map {
     width: 340px;
+  }
+  .reviews {
+    padding: 40px 0 60px 0;
+  }
+  .reviews__title {
+    font-size: 30px;
+    line-height: 38px;
+    margin-bottom: 50px;
+  }
+  .reviews-slider__item {
+    max-width: 580px;
   }
 }
 @media (max-width: 768px) {
@@ -637,12 +653,12 @@ img {
     order: -1;
     margin-left: 0;
   }
-  .slider {
-    height: 350px;
-  }
   .hotel-right {
     flex-direction: column;
     min-height: 450px;
+  }
+  .hotel-slider {
+    height: 350px;
   }
   .booking {
     width: 100%;
@@ -656,16 +672,42 @@ img {
     flex-direction: column;
     align-items: flex-start;
   }
+  .reviews-slider__button {
+    top: 45px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: -65px;
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    transform: translate(50%, -50%);
+    margin-right: -65px;
+  }
+  .reviews-slider__item {
+    width: 95%;
+    padding: 0 30px 30px;
+  }
+  .reviews-slider__item:after, .reviews-slider__item::before {
+    display: none;
+  }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
   }
-  .slider {
+  .hotel-slider {
     height: 250px;
   }
   .hotel__slider {
     margin-bottom: 20px;
+  }
+  .hotel-slider__img {
+    width: 100%;
+    height: 250px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .newsletter-title {
     font-style: normal;
@@ -681,5 +723,19 @@ img {
   }
   .subscribe__input {
     width: 280px;
+  }
+  .reviews {
+    padding: 40px 0 50px 0;
+  }
+  .reviews__title {
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 42px;
+  }
+  .reviews-slider__button {
+    top: 45px;
+  }
+  .reviews-slider__item {
+    padding: 0;
   }
 }/*# sourceMappingURL=style.css.map */
