--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
+  .hotel
+    &-slider
+      width: 590px      
+  .hotel
+    &-slider
+      &__img
+        height: 450px
+        object-fit: cover
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -27,8 +33,8 @@
   .hotel
     &-grid
       flex-direction: column
-  .slider
-    width: 100%
+    &-slider
+      width: 100%
   .hotel
     &-right
       flex-direction: row
@@ -37,7 +43,16 @@
   .booking
     width: 340px
   .map
-    width: 340px    
+    width: 340px
+  .reviews
+    padding: 40px 0 60px 0
+    &__title
+      font-size: 30px
+      line-height: 38px
+      margin-bottom: 50px
+    &-slider           
+      &__item  
+        max-width: 580px  
 
 @media (max-width: 768px)
   .container
@@ -82,13 +97,13 @@
         display: none
       &__offer
         order: -1
-        margin-left: 0
-  .slider
-    height: 350px
+        margin-left: 0  
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking
     width: 100%       
   .map
@@ -99,14 +114,36 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &-slider
+      &__button
+        top: 45px                
+        &--prev
+          left: 50%
+          transform: translate(-50%, -50%)
+          margin-left: -65px
+        &--next
+          right: 50%
+          transform: translate(50%, -50%)
+          margin-right: -65px                   
+      &__item  
+        width: 95%
+        padding: 0 30px 30px
+        &:after, &::before
+          display: none
 @media ( max-width: 576px )
   .logo
     width: 99px 
-  .slider
-    height: 250px
   .hotel
+    &-slider
+      height: 250px
     &__slider
       margin-bottom: 20px
+    &-slider
+      &__img
+        width: 100%
+        height: 250px
+        object-fit: cover        
   .newsletter
     &-title
       font-style: normal
@@ -121,4 +158,15 @@
   .subscribe
     &__input
       width: 280px
+  .reviews
+    padding: 40px 0 50px 0
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 42px
+    &-slider
+      &__button
+        top: 45px
+      &__item
+        padding: 0
   
