--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -14,7 +14,7 @@
       display: flex
       flex-direction: column
       align-items: center
-      width: 730px
+      max-width: 730px
       margin: 45px auto 0      
       background-color: #fff
       border-radius: 8px   
@@ -55,9 +55,7 @@
         background-image: url(../img/review-slider-arrow-left.svg)   
       &--next
         right: 0
-        background-image: url(../img/review-slider-arrow-right.svg)      
-      
-        
+        background-image: url(../img/review-slider-arrow-right.svg)         
     &__profile
       display: flex
       flex-direction: column
