in process: activities

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,6 +1,8 @@
 .hotel
   padding-top: 23px
   padding-bottom: 70px  
+  &__slider
+    margin-left: 0
   &-name
     margin-top: 4px
     margin-bottom: 0
