--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ img {
   padding-top: 23px;
   padding-bottom: 70px;
 }
+.hotel__slider {
+  margin-left: 0;
+}
 .hotel-name {
   margin-top: 4px;
   margin-bottom: 0;
@@ -530,6 +533,77 @@ img {
   line-height: 160%;
   text-align: justify;
   margin: auto;
+}
+
+.activities {
+  padding: 60px 0 98px 0;
+}
+.activities__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin-bottom: 57px;
+}
+.activities-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.activities .card {
+  position: relative;
+  width: 255px;
+  height: 255px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.activities .card::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  z-index: -1;
+}
+.activities .card__image {
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 6px;
+  overflow: hidden;
+  z-index: -1;
+}
+.activities .card__title {
+  position: absolute;
+  margin: 0;
+  bottom: 72px;
+  /* left: 26px */  
+  z-index: 1;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+.activities .card__button {
+  position: absolute;
+  bottom: 24px;
+  /* left: 26px */
+  min-width: 100px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 1;
+  border: none;
+  border-radius: 4px;
+  background-color: #EC1F46;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 @media (max-width: 1200px) {
