--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/newsletter'
 //Подключение стилей для отзывов
 @import 'blocks/reviews'
+//Подключение стилей для развлечений
+@import 'blocks/activities'
 //Подключение стилей для адаптива
 @import 'media'
