--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,132 @@ img {
   line-height: 16px;
 }
 
+.packages {
+  padding-top: 40px;
+  padding-bottom: 70px;
+}
+.packages-title {
+  margin: 0 0 65px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.packages-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 2;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  row-gap: 30px;
+}
+.packages-element {
+  height: 500px;
+  background-color: #0A223D;
+  color: #FFFFFF;
+  border-radius: 8px;
+}
+.packages-element__icon {
+  margin-right: 14px;
+}
+.packages-element__text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+.packages-element__details {
+  margin-bottom: 11px;
+}
+.packages-element__old-price {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+}
+.packages-element__bookNow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.packages-element__price {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+}
+.packages-element__button {
+  width: 120px;
+  height: 40px;
+  border-radius: 4px;
+  border: none;
+  background-color: #EC1F46;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  cursor: pointer;
+}
+.packages-double {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+}
+.packages-double__big-image {
+  width: 366px;
+  height: 500px;
+  border-radius: 8px 0px 0px 8px;
+}
+.packages-double__information {
+  padding: 46px 21px 30px 44px;
+  width: 50%;
+}
+.packages-double__title {
+  margin: 0 0 27px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+}
+.packages-double__description {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160.6%;
+  margin-bottom: 34px;
+}
+.packages-double__room {
+  margin-bottom: 37px;
+}
+.packages-brief {
+  display: flex;
+  flex-direction: column;
+}
+.packages-brief__image {
+  height: 50%;
+  border-radius: 8px 8px 0px 0px;
+}
+.packages-brief__information {
+  padding: 0px 21px 25px 32px;
+}
+.packages-brief__stars {
+  display: none;
+}
+.packages-brief__title {
+  margin: 30px 0 23px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+}
+.packages-brief__description {
+  display: none;
+}
+.packages-brief__room {
+  margin-bottom: 24px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
