--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/reviews'
 //Подключение стилей для развлечений
 @import 'blocks/activities'
+//Подключение стилей для Other packages
+@import 'blocks/packages'
 //Подключение стилей для адаптива
 @import 'media'
