--- a/css/style.css
+++ b/css/style.css
@@ -715,6 +715,7 @@ img {
   flex-direction: column;
 }
 .packages-brief__image {
+  width: 100%;
   height: 50%;
   border-radius: 8px 8px 0px 0px;
 }
