--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -81,6 +81,7 @@
     display: flex
     flex-direction: column    
     &__image
+      width: 100%
       height: 50%
       border-radius: 8px 8px 0px 0px
     &__information
