--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,9 @@ img {
   flex-direction: column;
   position: relative;
 }
+.packages-brief__imgwrapper {
+  height: 250px;
+}
 .packages-brief:before {
   content: "Flash Offer";
   position: absolute;
@@ -753,7 +756,7 @@ img {
 }
 .packages-brief__image {
   width: 100%;
-  height: 50%;
+  height: 250px;
   border-radius: 8px 8px 0px 0px;
   overflow: cover;
 }
@@ -792,6 +795,29 @@ img {
   .card {
     width: 230px;
     height: 230px;
+  }
+  .packages-element {
+    height: 450px;
+  }
+  .packages-double__big-image {
+    height: 100%;
+  }
+  .packages-double__information {
+    padding-top: 20px;
+    padding-bottom: 25px;
+  }
+  .packages-double__description {
+    margin-bottom: 24px;
+    font-size: 12px;
+  }
+  .packages-double__description {
+    margin-bottom: 24px;
+  }
+  .packages-double__room {
+    margin-bottom: 24px;
+  }
+  .packages-brief__image {
+    height: 190px;
   }
 }
 @media (max-width: 992px) {
@@ -858,6 +884,30 @@ img {
   }
   .card__item {
     margin-bottom: 20px;
+  }
+  .packages {
+    padding-top: 25px;
+  }
+  .packages-title {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+  .packages-wrapper {
+    grid-template-columns: 1fr 1fr;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+    row-gap: 20px;
+  }
+  .packages-double__big-image {
+    width: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .packages-double__description {
+    margin-bottom: 34px;
+  }
+  .packages-double__room {
+    margin-bottom: 37px;
   }
 }
 @media (max-width: 768px) {
@@ -955,6 +1005,32 @@ img {
     width: 49%;
     height: 255px;
   }
+  .packages-element {
+    height: 425px;
+  }
+  .packages-double__title {
+    margin-bottom: 20px;
+  }
+  .packages-double__big-image {
+    height: 100%;
+  }
+  .packages-double__information {
+    padding-top: 20px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+  }
+  .packages-double__description {
+    margin-bottom: 20px;
+  }
+  .packages-double__room {
+    margin-bottom: 24px;
+  }
+  .packages-brief__title {
+    margin: 16px 0;
+  }
+  .packages-brief__image {
+    height: 190px;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -1012,5 +1088,60 @@ img {
   }
   .card {
     width: 100%;
+  }
+  .packages {
+    padding-bottom: 50px;
+  }
+  .packages-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .packages-element {
+    justify-self: center;
+  }
+  .packages-title {
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
+  .packages-double {
+    grid-column-end: 2;
+    flex-direction: column;
+  }
+  .packages-double__imagewrapper {
+    width: 285px;
+    height: 190px;
+  }
+  .packages-double__big-image {
+    width: 285px;
+    height: 190px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 8px 8px 0px 0px;
+  }
+  .packages-double__stars {
+    display: none;
+  }
+  .packages-double__title {
+    margin: 16px 0;
+  }
+  .packages-double__description {
+    display: none;
+  }
+  .packages-double__information {
+    width: 100%;
+    padding: 0 21px 25px 32px;
+  }
+  .packages-double:before {
+    content: "Flash Offer";
+    top: 26px;
+    width: 60px;
+    height: 18px;
+    border-radius: 0px 4px 4px 0px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 8px;
+    line-height: 18px;
+  }
+  .packages-brief__image {
+    width: 285px;
   }
 }/*# sourceMappingURL=style.css.map */
