--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -18,7 +18,7 @@
     height: 500px
     background-color: $dark-color
     color: $white-color
-    border-radius: 8px    
+    border-radius: 8px     
     &__icon
       margin-right: 14px
     &__text
@@ -99,6 +99,8 @@
     display: flex
     flex-direction: column 
     position: relative
+    &__imgwrapper   
+      height: 250px
     &:before        
         content: 'Flash Offer'
         position: absolute
@@ -117,7 +119,7 @@
         z-index: 1      
     &__image
       width: 100%
-      height: 50%
+      height: 250px
       border-radius: 8px 8px 0px 0px
       overflow: cover 
     &__information
