--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/activities'
 //Подключение стилей для Other packages
 @import 'blocks/packages'
+//Подключение стилей для Footer
+@import 'blocks/footer'
 //Подключение стилей для адаптива
 @import 'media'
