--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -5,7 +5,8 @@
     padding-bottom: 46px
     display: grid
     grid-template-rows: 4
-    grid-template-columns: repeat(4, minmax(160px, 260px))
+    grid-template-columns: repeat(4, minmax(min-content, 1fr))
+    grid-auto-rows: minmax(70px, min-content)
   &__title
     color: $white-color
     font-style: normal
@@ -14,6 +15,10 @@
     line-height: 23px
     text-transform: uppercase
     margin: 0 0 16px 0
+    &--inline
+      margin: 0 43px 0 0
+  &__list
+    margin-bottom: 30px
   &__ul
     padding: 0
     margin: 0
@@ -26,4 +31,122 @@
     line-height: 160%
   &__link
     text-decoration: none
-    color: inherit  
+    color: inherit    
+  &__logo
+    width: 166px
+    grid-row: 1 / 3
+    align-self: center
+  &__categories
+    grid-row: 1 / 4
+  &__additional
+    margin-left: 15px
+  &__social
+    &-network
+      display: flex
+      grid-row: 2 / 4
+      grid-column: span 2
+      margin-left: 15px
+    &-links
+      width: 83px
+      display: flex      
+      justify-content: space-between      
+  &__legal
+    margin-left: 30%
+  &__contact
+    &-details
+      grid-column: span 2
+    &-text
+      margin-bottom: 22px
+  &__text
+    color: $footer-text
+    margin: 0 0 22px 0
+  &__list
+    list-style-type: none
+    padding: 0
+  &__email
+    text-decoration: none
+    color: inherit
+  &__item
+    display: flex
+    /* margin-bottom: 22px */
+  &__icon
+    width: 20px
+    margin-right: 18px
+  &__send-message
+    grid-column: span 2
+    margin-left: 15px
+  &__required-fields
+    max-width: 540px
+    display: flex
+    justify-content: space-between       
+  .input
+    background-color: #fff
+    width: 255px
+    height: 50px
+    border-radius: 4px
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
+    border: none
+    padding: 0 23px
+    margin-bottom: 15px
+  &__message
+    height: 123px
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
+    width: 540px
+    height: 123px
+    margin-bottom: 22px
+    padding: 18px 23px
+    border-radius: 4px
+    resize: none    
+  &__send
+    display: flex
+    align-items: center
+    justify-content: space-between
+  &__button
+    width: 160px
+    height: 50px
+    border: none
+    background-color: $accent
+    color: $white-color
+    font-weight: 700
+    font-size: 12px
+    line-height: 15px
+    border-radius: 4px
+  &__info
+    color: #E0E0E0
+    font-style: normal
+    font-weight: 700
+    font-size: 12px
+    line-height: 15px
+.disclaimer    
+  grid-column: 2 / 4
+  justify-self: center  
+  &__list
+    margin-top: 95px
+    display: flex
+    justify-content: space-between    
+    list-style-type: none
+    padding: 0
+  &__item
+    padding: 0 5px
+  &__link
+    text-decoration: none
+    color: $white-color
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
+.cards
+  justify-self: end
+  &__block
+    margin-top: 95px
+
+
+
+
+
