--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -100,6 +100,47 @@
         margin-bottom: 34px
       &__room
         margin-bottom: 37px
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr 1fr 20% 20% 1fr 1fr
+    &__logo
+      width: 104px
+      grid-column: 1 / 3
+      grid-raw: 1 / 2
+      align-self: start
+    &__social
+      &-network
+        grid-column: 3 / 6
+        grid-row: 1 / 3
+        align-self: center
+        margin: 0
+    &__categories
+      grid-row: 3 / 4
+      grid-column: 1 / 3
+    &__additional
+      grid-row: 3 / 4
+      grid-column: 3 / 5
+      margin: 0      
+    &__legal
+      grid-row: 3 / 4
+      grid-column: 5 / 7
+      margin: 0
+    &__contact
+      &-details
+        grid-column: span 6
+    &__send
+      width: 540px
+      &-message
+        grid-column: span 5
+  .disclaimer
+    grid-column: 1 / 5
+    justify-self: start
+    &__list
+      margin-top: 56px
+  .cards
+    grid-column: 5 / 7
+    justify-self: end
+    margin-top: 56px
 
 @media (max-width: 768px)
   .container
@@ -201,7 +242,12 @@
       &__title
         margin: 16px 0
       &__image
-        height: 190px       
+        height: 190px  
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr 1fr 15% 25% 1fr 1fr  
+    &__required-fields
+      width: 540px 
       
 @media ( max-width: 576px )
   .logo
@@ -293,4 +339,76 @@
     &-brief
       &__image
         width: 285px
+  .footer
+    &__title
+      margin-top: 30px
+    &__container
+      width: 95%
+    &-wrapper
+      padding-top: 69px
+      grid-template-columns: 95%
+    &__title
+      &--inline      
+        margin-bottom: 20px
+    &__logo
+      grid-row: 1
+      grid-column: 1        
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1 
+        align-self: end
+        flex-direction: column
+      &__links
+        margin-top: 30px   
+    &__legal
+      grid-row: 3
+      grid-column: 1
+    &__additional
+      grid-row: 4
+      grid-column: 1
+    &__categories
+      grid-row: 5
+      grid-column: 1
+    &__contact-details
+      grid-row: 6
+      grid-column: 1
+    &__send-message
+      grid-row: 7
+      grid-column: 1
+      width: 100%
+      margin: 0
+    &__required
+      &-fields
+        width: 100%
+        flex-wrap: wrap
+    &__input
+      width: 100%
+    &__message
+      width: 100%
+      margin: 0
+    &__send
+      flex-direction: column-reverse
+      align-items: start
+    &__info
+      margin: 15px 0      
+  .disclaimer
+    grid-row: 8
+    grid-column: 1
+    &__list
+      margin-top: 30px
+  .cards
+    grid-row: 9
+    grid-column: 1
+    justify-self: start
+    &__block
+      margin: 0
+  
+
+    
+
+
+
+
+
       
