--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -81,7 +81,8 @@
     justify-content: space-between       
   .input
     background-color: #fff
-    width: 255px
+    flex-basis: 47%
+    /* width: 255px */
     height: 50px
     border-radius: 4px
     font-style: normal
@@ -92,13 +93,12 @@
     padding: 0 23px
     margin-bottom: 15px
   &__message
-    height: 123px
+    width: 540px
+    height: 123px    
     font-style: normal
     font-weight: 400
     font-size: 12px
     line-height: 15px
-    width: 540px
-    height: 123px
     margin-bottom: 22px
     padding: 18px 23px
     border-radius: 4px
