--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -57,11 +57,12 @@
       flex-direction: column
     &-slider
       width: 100%
-  .hotel
+      margin-bottom: 30px 
+      &__img
+        width: 100% 
+        object-fit: cover
     &-right
-      flex-direction: row
-    &__slider
-      margin-bottom: 30px
+      flex-direction: row  
   .booking
     width: 340px
   .map
@@ -74,7 +75,7 @@
       margin-bottom: 50px
     &-slider           
       &__item  
-        max-width: 580px 
+        max-width: 580px
   .activities
     &-wrapper
       flex-wrap: wrap
