--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -459,7 +459,10 @@
   .navbar
     width: 100%
     &-top
-      width: 85%
+      width: 100%
+  .footer
+    &__send
+      width: 100%
       
   
 
