--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -130,7 +130,7 @@
       &-details
         grid-column: span 6
     &__send
-      width: 540px
+      width: 100%
       &-message
         grid-column: span 5
   .disclaimer
@@ -460,8 +460,13 @@
     width: 100%
     &-top
       width: 100%
+  .search
+    &__input
+      width: 100%
   .footer
     &__send
+      width: 100%
+    &__required-fields
       width: 100%
       
   
