--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -117,6 +117,7 @@
     font-size: 12px
     line-height: 15px
     border-radius: 4px
+    cursor: pointer
   &__info
     color: #E0E0E0
     font-style: normal
