--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -7,6 +7,12 @@
     bottom: 0
     background-color: rgba(0, 143, 223, 0.39)
     z-index: 20
+    visibility: hidden
+    opacity: 0
+    transition: opacity 0.2s
+    &--visible
+      visibility: visible
+      opacity: 1
   &__dialog
     position: fixed
     top: 50%
@@ -18,6 +24,12 @@
     border-radius: 8px
     padding: 33px 88px
     z-index: 21
+    visibility: hidden
+    opacity: 0
+    transition: opacity 0.2s
+    &--visible
+      visibility: visible
+      opacity: 1
   &__close
     position: absolute
     top: 17px
@@ -40,3 +52,13 @@
     width: 100%
     min-height: 123px
     margin-bottom: 15px
+  &__send
+    display: flex
+    justify-content: space-between
+    align-items: center
+  &__info
+    color: #E0E0E0
+    font-style: normal
+    font-weight: 700
+    font-size: 12px
+    line-height: 15px
