--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -64,6 +64,8 @@
     font-weight: 600
     font-size: 12px
     line-height: 16px
+  &__button:hover
+    transform: scale(1.1, 1.1)
       
       
       
