--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -169,7 +169,10 @@
     font-weight: 600
     font-size: 14px
     line-height: 19px
-    cursor: pointer
+    cursor: point
+  &__button:hover
+    transform: scale(1.1, 1.1)
+  
 .map
   width: 347px
   height: 213px
