--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -52,6 +52,8 @@
       font-size: 14px
       line-height: 19px
       cursor: pointer
+    &__button:hover
+      transform: scale(1.1, 1.1)
   &-double
     grid-column-start: 1
     grid-column-end: 3  
